erDiagram
    USERS ||--o{ USER_SESSIONS : owns
    USERS ||--o{ USER_OAUTH_ACCOUNTS : links
    USERS ||--|| WALLETS : owns
    USERS ||--o{ MARKETS : creates
    USERS ||--o{ MARKET_REVIEWS : reviews
    USERS ||--o{ TRADES : places
    USERS ||--o{ POSITIONS : holds
    USERS ||--o{ ADMIN_LOGS : performs
    WALLETS ||--o{ WALLET_TRANSACTIONS : records
    MARKETS ||--o{ MARKET_REVIEWS : has
    MARKETS ||--o{ TRADES : receives
    MARKETS ||--o{ POSITIONS : aggregates
    MARKETS ||--o{ MARKET_PRICE_HISTORY : prices

    USERS {
        uuid id PK
        varchar code UK
        varchar username UK
        varchar email UK
        varchar password_hash
        varchar role
        varchar status
        integer reputation
        timestamp last_login_at
        text avatar_url
        text bio
        timestamp created_at
        timestamp updated_at
    }
    USER_SESSIONS {
        uuid id PK
        uuid user_id FK
        varchar refresh_token_hash UK
        timestamp expires_at
        timestamp revoked_at
        varchar ip_address
        timestamp created_at
    }
    USER_OAUTH_ACCOUNTS {
        uuid id PK
        uuid user_id FK
        varchar provider
        varchar provider_uid
        varchar email
        timestamp created_at
    }
    WALLETS {
        uuid id PK
        uuid user_id FK
        numeric balance
        numeric locked_balance
        integer version
        timestamp created_at
        timestamp updated_at
    }
    MARKETS {
        uuid id PK
        varchar code UK
        uuid creator_id FK
        varchar title
        text description
        varchar category
        text source_url
        text image_url
        text resolution_rule
        varchar market_type
        timestamp close_at
        varchar status
        varchar result
        numeric result_value
        numeric yes_pool
        numeric no_pool
        uuid approved_by FK
        timestamp approved_at
        uuid resolved_by FK
        timestamp resolved_at
        timestamp created_at
        timestamp updated_at
    }
    MARKET_REVIEWS {
        uuid id PK
        varchar code UK
        uuid market_id FK
        uuid reviewer_id FK
        varchar status
        text comment
        timestamp created_at
    }
    TRADES {
        uuid id PK
        varchar code UK
        uuid user_id FK
        uuid market_id FK
        varchar side
        varchar action
        numeric amount
        numeric price
        numeric shares
        timestamp created_at
    }
    POSITIONS {
        uuid id PK
        uuid user_id FK
        uuid market_id FK
        uuid option_id
        numeric yes_shares
        numeric no_shares
        numeric yes_cost
        numeric no_cost
        varchar status
        timestamp updated_at
    }
    MARKET_PRICE_HISTORY {
        uuid id PK
        uuid market_id FK
        uuid option_id
        numeric yes_price
        numeric no_price
        numeric option_price
        numeric trade_volume
        timestamp recorded_at
    }
    WALLET_TRANSACTIONS {
        uuid id PK
        uuid wallet_id FK
        varchar type
        numeric amount
        numeric balance_after
        varchar reference_type
        uuid reference_id
        varchar idempotency_key UK
        timestamp created_at
    }
    ADMIN_LOGS {
        uuid id PK
        varchar code UK
        uuid admin_user_id FK
        varchar action
        varchar target_type
        uuid target_id
        jsonb metadata
        timestamp created_at
    }
